# grover-rudolph

./: .gitignore  Grudolph_plot_2.py  LICENSE  Makefile  README.md  helping_sp.py  pyproject.toml  requirements.txt  state_preparation.py  test_state_preparation.py
.github/workflows/: ci.yaml
Algorithm/: Grudolph_get_data_1.py  Grudolph_plot_2.py  README.md  helping_sp.py  plot_test.py  sp_circuit_cirq.py  sp_circuit_cirq_test.py  state_preparation.py  state_preparation_circuit.py  state_preparation_test.py  test_state_preparation.py
Algorithm/data/: Gate_count_10.npy  Gate_count_2.npy  Gate_count_3.npy  Gate_count_4.npy
data/: Count_d_10.csv  Count_d_100.csv  Count_d_200.csv  Count_n_12.csv  Count_n_16.csv  Count_n_20.csv  Count_real_d_10.csv  Count_real_d_100.csv  Count_real_d_200.csv  Count_real_n_12.csv  Count_real_n_16.csv  Count_real_n_20.csv  Count_uniform_d_10.csv  Count_uniform_d_100.csv  Count_uniform_d_200.csv  Count_uniform_n_12.csv  Count_uniform_n_16.csv  Count_uniform_n_20.csv
scripts/: Grudolph_get_data_1.py
src/: use_max.ipynb  use_max_test.py
src/grover_rudolph/: __init__.py  helping_sp.py  state_preparation.py  state_preparation_circuit.py
tests/: state_preparation_test.py
usecase/: use_max.py
